--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 body{background:var(--bg);color:var(--text);font-family:'JetBrains Mono',monospace;height:100vh;overflow:hidden;user-select:none;-webkit-user-select:none;-webkit-touch-callout:none;display:flex;flex-direction:column}
 .workspace{flex:1;position:relative;overflow:auto;background:var(--bg)}
 .ws-inner{position:relative;min-width:3000px;min-height:2000px;background-image:radial-gradient(circle,rgba(255,255,255,.04) 1px,transparent 1px);background-size:24px 24px}
-.topbar{display:flex;align-items:center;height:36px;padding:0 10px;gap:6px;border-bottom:1px solid var(--border);flex-shrink:0;background:var(--surface);z-index:100}
+.topbar{display:flex;align-items:center;height:36px;padding:0 10px;gap:6px;border-bottom:1px solid var(--border);flex-shrink:0;background:var(--surface);z-index:100;overflow-x:auto;overflow-y:hidden;flex-wrap:nowrap;scrollbar-width:none;-webkit-overflow-scrolling:touch}
+.topbar::-webkit-scrollbar{display:none}
+.topbar>*{flex-shrink:0}
 .topbar h1{font-family:'Syne',sans-serif;font-weight:800;font-size:15px;color:#fff;letter-spacing:-.5px}
 .topbar h1 span{color:var(--accent)}
 .sep{width:1px;height:16px;background:var(--border);margin:0 1px;flex-shrink:0}
